--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,8 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
+
+background_image: /images/site-logo.png
 # SEO Related
 google_site_verification :
 bing_site_verification   :
